@@ -3,8 +3,9 @@ qmsystem2 (1.3.2) unstable; urgency=low
   [Matias Muhonen]
   * QmHeartbeat documentation is unclear (Fixes: NB#266900)
   * Improve error handling of QmCABC (Fixes: NB#270772)
+  * QmUSBMode::mountStatus does not return correct info (Fixes: NB#273012)
 
- -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Wed, 06 Jul 2011 13:05:34 +0300
+ -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 18 Jul 2011 14:00:26 +0300
 
 qmsystem2 (1.3.1) unstable; urgency=low
 
